--- a/integration-tests/modules/testdata/wasm/ft/Cargo.toml
+++ b/integration-tests/modules/testdata/wasm/ft/Cargo.toml
@@ -33,6 +33,6 @@ cosmwasm-storage = "1.2.5"
 cw-storage-plus = "1.0.1"
 cw2 = "1.1.0"
 thiserror = "1.0.40"
-coreum-wasm-sdk = { path = "./package/coreum-wasm-sdk" }
+coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk", branch = "keyne/upgrade-token-msg" }
 cosmwasm-schema = "1.2.6"
 cw-ownable = "0.5.1"
