--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,8 +66,11 @@ jobs:
             linter-cache: false
             docker-cache: true
 
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted]
     steps:
+      - uses: actions/setup-go@v4
+        with:
+          go-version: "1.21.0"
       - name: Go version used to build crust tool
         run: go version
       - name: Checkout coreum
@@ -96,7 +99,7 @@ jobs:
         with:
           # we need to exclude code-hashes.json from the rest, since the invalidation condition for it is not
           # same as WASM cache, but it is same as smart contract artifacts.
-          path: | 
+          path: |
             ~/.cache/crust/wasm
             !/.cache/crust/wasm/code-hashes.json
           key: ${{ runner.os }}-wasm-cache-${{ hashFiles('~/.cache/crust/wasm/**/*.rs') }}
@@ -129,7 +132,7 @@ jobs:
           # we need to cache code-hashes.json under the same key as the artifacts, since the invalidation condition
           # for both of them are the same.
           path: |
-            ${{ github.workspace }}/coreum/integration-tests/contracts/**/artifacts/* 
+            ${{ github.workspace }}/coreum/integration-tests/contracts/**/artifacts/*
             ~/.cache/crust/wasm/code-hashes.json
           key: ${{ runner.os }}-cache-smart-contracts-${{ hashFiles('./coreum/**/*.rs') }}
         if: ${{ matrix.wasm-cache }}
