use runner image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
 
     runs-on: [self-hosted]
     container:
-      image: ghcr.io/catthehacker/ubuntu:full-20.04
+      image: ghcr.io/catthehacker/ubuntu:runner-20.04
       options: "--privileged"
     steps:
       - uses: actions/setup-go@v4
