Disable cache for integration tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,36 +40,33 @@ jobs:
             go-cache: true
             wasm-cache: true
             linter-cache: false
-            docker-cache: true
+            docker-cache: false
           - ci_step: "integration tests coreum-ibc"
             command: "crust build/integration-tests/coreum/ibc images && crust znet test --test-groups=coreum-ibc --timeout-commit 1s"
             go-cache: true
             wasm-cache: false
             linter-cache: false
-            docker-cache: true
+            docker-cache: false
           - ci_step: "integration tests coreum-upgrade-v1.0.0"
             command: "crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images && crust znet test --cored-version=v1.0.0 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s"
             go-cache: true
             wasm-cache: true
             linter-cache: false
-            docker-cache: true
+            docker-cache: false
           - ci_step: "integration tests coreum-upgrade-v2.0.0"
             command: "crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images && crust znet test --cored-version=v2.0.0 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s"
             go-cache: true
             wasm-cache: true
             linter-cache: false
-            docker-cache: true
+            docker-cache: false
           - ci_step: "integration tests faucet"
             command: "crust build/integration-tests/faucet images && crust znet test --test-groups=faucet --timeout-commit 1s"
             go-cache: true
             wasm-cache: false
             linter-cache: false
-            docker-cache: true
+            docker-cache: false
 
     runs-on: [self-hosted]
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-20.04
-      options: "--privileged"
     steps:
       - uses: actions/setup-go@v4
         with:
