--- a/.github/workflows/ci-v0.47-migration.yml
+++ b/.github/workflows/ci-v0.47-migration.yml
@@ -17,7 +17,7 @@ jobs:
           "lint",
           "test",
           "integration tests coreum-modules",
-#          "integration tests coreum-ibc", FIXME(v47-restore CI)
+          "integration tests coreum-ibc",
 #          "integration tests coreum-upgrade-v1.0.0",
 #          "integration tests coreum-upgrade-v2.0.0",
           "integration tests faucet",
@@ -41,12 +41,12 @@ jobs:
             wasm-cache: true
             linter-cache: false
             docker-cache: true
-#          - ci_step: "integration tests coreum-ibc" FIXME(v47-restore CI)
-#            command: "crust build/integration-tests/coreum/ibc images && crust znet test --test-groups=coreum-ibc --timeout-commit 1s"
-#            go-cache: true
-#            wasm-cache: false
-#            linter-cache: false
-#            docker-cache: true
+          - ci_step: "integration tests coreum-ibc" 
+            command: "crust build/integration-tests/coreum/ibc images && crust znet test --test-groups=coreum-ibc --timeout-commit 1s"
+            go-cache: true
+            wasm-cache: false
+            linter-cache: false
+            docker-cache: true
 #          - ci_step: "integration tests coreum-upgrade-v1.0.0"
 #            command: "crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images && crust znet test --cored-version=v1.0.0 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s"
 #            go-cache: true
