--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,7 @@ jobs:
           "test",
           "integration tests coreum-modules",
           "integration tests coreum-ibc",
-          "integration tests coreum-upgrade-v1.0.0",
-          "integration tests coreum-upgrade-v2.0.0",
+          "integration tests coreum-upgrade-v3.0.0",
           "integration tests faucet",
         ]
         include:
@@ -44,17 +43,11 @@ jobs:
           - ci_step: "integration tests coreum-ibc"
             command: "crust build/integration-tests/coreum/ibc images && crust znet test --test-groups=coreum-ibc --timeout-commit 1s"
             go-cache: true
-            wasm-cache: false
+            wasm-cache: true 
             linter-cache: false
             docker-cache: true
-          - ci_step: "integration tests coreum-upgrade-v1.0.0"
-            command: "crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images && crust znet test --cored-version=v1.0.0 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s"
-            go-cache: true
-            wasm-cache: true
-            linter-cache: false
-            docker-cache: true
-          - ci_step: "integration tests coreum-upgrade-v2.0.0"
-            command: "crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images && crust znet test --cored-version=v2.0.0 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s"
+          - ci_step: "integration tests coreum-upgrade-v3.0.0"
+            command: "crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images && crust znet test --cored-version=v2.0.2 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s"
             go-cache: true
             wasm-cache: true
             linter-cache: false
@@ -79,6 +72,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: CoreumFoundation/crust
+          ref: v0.47-migration-v2
           path: crust
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
