--- a/integration-tests/contracts/modules/nft/Cargo.toml
+++ b/integration-tests/contracts/modules/nft/Cargo.toml
@@ -33,6 +33,6 @@ cosmwasm-storage = "1.2.5"
 cw-storage-plus = "1.0.1"
 cw2 = "1.0.1"
 thiserror = { version = "1.0.40" }
-coreum-wasm-sdk = { version = "0.2.0", git = "https://github.com/CoreumFoundation/coreum-wasm-sdk.git", branch = "keyne/add-proto-structures" }
+coreum-wasm-sdk = "0.2.0"
 cosmwasm-schema = "1.2.6"
 cw-ownable = "0.5.1"
