--- a/integration-tests/contracts/modules/authz/Cargo.toml
+++ b/integration-tests/contracts/modules/authz/Cargo.toml
@@ -29,8 +29,11 @@ library = []
 
 [dependencies]
 protobuf = "3.2.0"
-thiserror = "1.0.40"
-cosmwasm-std = { version = "1.2.6", features = ["stargate"] }
-cw2 = "1.0.1"
+thiserror = "1.0.50"
+cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
+cw2 = "1.1.1"
 cw-storage-plus = "1.1.0"
-cosmwasm-schema = "1.2.6"
+cosmwasm-schema = "1.5.0"
+# TODO(keyleu): Change to coreum-wasm-sdk = "0.2.1" when it's published
+coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk", branch = "keyne/upgrade-coreum-wasm-sdk" }
+cw-utils = "1.0.2"
