--- a/integration-tests/contracts/modules/nft/Cargo.toml
+++ b/integration-tests/contracts/modules/nft/Cargo.toml
@@ -33,7 +33,6 @@ cosmwasm-storage = "1.4.1"
 cw-storage-plus = "1.1.0"
 cw2 = "1.1.1"
 thiserror = { version = "1.0.50" }
-# TODO(keyleu): Change to coreum-wasm-sdk = "0.2.1" when it's published
-coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk", branch = "keyne/upgrade-coreum-wasm-sdk" }
+coreum-wasm-sdk = "0.2.1"
 cosmwasm-schema = "1.4.1"
 cw-ownable = "0.5.1"
