--- a/integration-tests/contracts/modules/authz/Cargo.toml
+++ b/integration-tests/contracts/modules/authz/Cargo.toml
@@ -34,6 +34,5 @@ cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
 cw2 = "1.1.1"
 cw-storage-plus = "1.1.0"
 cosmwasm-schema = "1.5.0"
-# TODO(keyleu): Change to coreum-wasm-sdk = "0.2.1" when it's published
-coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk", branch = "keyne/upgrade-coreum-wasm-sdk" }
+coreum-wasm-sdk = "0.2.1"
 cw-utils = "1.0.2"
