Add cored-client-darwin-amd64 to the release.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           ln crust/bin/.cache/cored/docker.linux.amd64/bin/cored cored-linux-amd64
           ln crust/bin/.cache/cored/docker.linux.arm64/bin/cored cored-linux-arm64
+          ln crust/bin/.cache/cored/docker.darwin.amd64/bin/cored-client cored-client-darwin-amd64
           ln crust/bin/.cache/cored/docker.darwin.arm64/bin/cored-client cored-client-darwin-arm64
           sha256sum cored-* > checksums.txt
       - name: Create release
@@ -55,6 +56,7 @@ jobs:
           files: |
             cored-linux-amd64
             cored-linux-arm64
+            cored-client-darwin-amd64
             cored-client-darwin-arm64
             checksums.txt
       - name: Create release candidate
@@ -67,5 +69,6 @@ jobs:
           files: |
             cored-linux-amd64
             cored-linux-arm64
+            cored-client-darwin-amd64
             cored-client-darwin-arm64
             checksums.txt
