Add cored-client-darwin to the release. (#717)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,10 @@ jobs:
           fi
       - name: Link released binaries under right names
         run: |
-          ln crust/bin/.cache/cored/docker.amd64/bin/cored cored-linux-amd64
-          ln crust/bin/.cache/cored/docker.arm64/bin/cored cored-linux-arm64
+          ln crust/bin/.cache/cored/docker.linux.amd64/bin/cored cored-linux-amd64
+          ln crust/bin/.cache/cored/docker.linux.arm64/bin/cored cored-linux-arm64
+          ln crust/bin/.cache/cored/docker.darwin.amd64/bin/cored-client cored-client-darwin-amd64
+          ln crust/bin/.cache/cored/docker.darwin.arm64/bin/cored-client cored-client-darwin-arm64
           sha256sum cored-* > checksums.txt
       - name: Create release
         if: steps.check-tag.outputs.release == 'true'
@@ -52,6 +54,8 @@ jobs:
           files: |
             cored-linux-amd64
             cored-linux-arm64
+            cored-client-darwin-amd64
+            cored-client-darwin-arm64
             checksums.txt
       - name: Create release candidate
         if: steps.check-tag.outputs.release_candidate == 'true'
@@ -63,4 +67,6 @@ jobs:
           files: |
             cored-linux-amd64
             cored-linux-arm64
+            cored-client-darwin-amd64
+            cored-client-darwin-arm64
             checksums.txt
