Change WASM behaviour to default: burn vesting balance when instantiating contract (#740)
---------

Co-authored-by: Wojtek <wojtek@coreum.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,8 @@ jobs:
           "test",
           "integration tests coreum-modules",
           "integration tests coreum-ibc",
-          "integration tests coreum-upgrade-v3.0.0",
+          "integration tests coreum-upgrade v2.0.2 -> v3.0.0",
+          "integration tests coreum-upgrade v3.0.0 -> v3.0.x",
           "integration tests faucet",
         ]
         include:
@@ -47,10 +48,19 @@ jobs:
             wasm-cache: true 
             linter-cache: false
             docker-cache: true
-          - ci_step: "integration tests coreum-upgrade-v3.0.0"
+          - ci_step: "integration tests coreum-upgrade v2.0.2 -> v3.0.0"
+            # Note that we run upgrade tests only no module or IBC because some features in v3 are not compatible anymore.
             command: |
               crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images 
-              crust znet test --cored-version=v2.0.2 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s
+              crust znet test --cored-version=v2.0.2 --test-groups=coreum-upgrade --timeout-commit 1s
+            go-cache: true
+            wasm-cache: true
+            linter-cache: false
+            docker-cache: true
+          - ci_step: "integration tests coreum-upgrade v3.0.0 -> v3.0.x"
+            command: |
+              crust build/integration-tests/coreum/upgrade build/integration-tests/coreum/modules build/integration-tests/coreum/ibc images 
+              crust znet test --cored-version=v3.0.0 --test-groups=coreum-upgrade,coreum-modules,coreum-ibc --timeout-commit 1s
             go-cache: true
             wasm-cache: true
             linter-cache: false
